--- a/IBMTechEXEmployee/platforms/android/res/xml/config.xml
+++ b/IBMTechEXEmployee/platforms/android/res/xml/config.xml
@@ -115,8 +115,8 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
-    <preference name="mfpServerUrl" value="http://172.31.99.103:10080" />
-    <preference name="mfpServerRuntime" value="BackendRuntime" />
+    <preference name="mfpServerUrl" value="http://172.31.6.135:10080" />
+    <preference name="mfpServerRuntime" value="IBMTechExBackEnd" />
     <preference name="displayName" value="IBMTechEXEmployee" />
     <preference name="mfpManualInit" value="false" />
 </widget>
